<resources>
    <string name="app_name">FixPro</string>
    <string name="provider_gps">GPS</string>
    <string name="status_gps">Status GPS</string>
    <string name="provider_network">Network</string>
    <string name="status_network">Status Network</string>
    <string name="location_settings">Location settings</string>
    <string name="title_location_permission">title_location_permission</string>
    <string name="text_location_permission">text_location_permission</string>
    <string name="ok">ok</string>

</resources>